# percy

./: .gitignore  flake.nix
crates/html-macro-test/src/tests/: all_tests.rs
crates/percy-dom/: Cargo.toml
crates/percy-dom/benches/: diff.rs
crates/percy-dom/src/: diff.rs  patch.rs  pdom.rs
crates/percy-dom/src/patch/: apply_patches.rs
crates/percy-dom/tests/: diff_patch.rs  element_effect.rs  hydrate_on_create_element.rs  hydrate_update.rs
crates/virtual-node/src/: create_element.rs  velement.rs
crates/virtual-node/src/event/: virtual_events.rs
crates/virtual-node/src/velement/: attributes.rs  special_attributes.rs
